[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/Fonts/TAPELOOP.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Art/Menus/pause_button_on.png" type="Texture" id=2]
[ext_resource path="res://Art/Menus/pause_button_off.png" type="Texture" id=3]
[ext_resource path="res://Art/Fonts/Savage.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Art/Menus/pause.png" type="Texture" id=5]
[ext_resource path="res://Script/s_pause_menu.gd" type="Script" id=6]
[ext_resource path="res://Art/Menus/pause_button_disabled.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 46
outline_size = 1
outline_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 28
outline_size = 1
outline_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.313726 )
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="CardSprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Retry" type="Control" parent="."]
margin_top = 80.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.527
margin_top = -45.1091
margin_right = 251.473
margin_bottom = 41.8909
rect_scale = Vector2( 0.7, 1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -26.0
margin_right = 242.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build" type="Control" parent="."]
margin_top = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Build"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -43.5
margin_right = 193.0
margin_bottom = 43.5
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 7 )

[node name="Label" type="Label" parent="Build"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -16.0
margin_right = 235.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "I have to change something"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Control" parent="."]
margin_top = -90.0
margin_bottom = -90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Resume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.527
margin_top = -45.1091
margin_right = 270.473
margin_bottom = 41.8909
rect_scale = Vector2( 0.6, 1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -26.0
margin_right = 242.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Resume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Control" parent="."]
margin_left = 101.2
margin_top = 165.411
margin_right = 101.2
margin_bottom = 165.411
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.719
margin_top = -44.5595
margin_right = 269.281
margin_bottom = 42.4405
rect_scale = Vector2( 0.6, 1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -9.05945
margin_right = 71.0
margin_bottom = 22.9406
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "I have to go :("
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.2
margin_top = -206.218
margin_right = 103.8
margin_bottom = -164.218
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "wait a minute..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Retry/Button" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Build/Button" to="." method="_on_Build_pressed"]
[connection signal="pressed" from="Resume/Button" to="." method="unpause"]
[connection signal="pressed" from="Quit/Button" to="." method="_on_Quit_pressed"]
